--- a/src/pages/Home/index.module.scss
+++ b/src/pages/Home/index.module.scss
@@ -1,5 +1,6 @@
 .home{
     width:100%;
     height: 100%;
-    background-image: url(~assets/chart.png) ;
+    background-image: url(~assets/chart.png);
+    background-size: 100% 100%;
 }
